--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ input,
 select {
     width: 100%;
     padding: 12px 20px;
-    margin: 8px 0;
+    margin: 8px 8px;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
